added port names and code to automatically detect the port independent of what system you are using. Also added a dummy getData method.  Added icons for the temp and humidity.

--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -6,9 +6,9 @@
 .clock li{
 	background: #fff;
 }
-.clock-text { color:#fff; }
+.clock-text { color:#000; }
 .clock-time,
 code {
   font-family: "Lucida Console", Monaco, monospace;
-  color:#fff;
+  color:#000;
 }
